--- a/process/pug/modules/_footer.pug
+++ b/process/pug/modules/_footer.pug
@@ -1,5 +1,21 @@
 //- modules/_footer.pug
 
 mixin footer()
-  header
-    h1 Submit Timesheet
+  footer
+    .btns
+      input(
+        type='reset'
+        value='Clear'
+      )
+      input(
+        type='submit'
+        value='Submit'
+      )
+      input(
+        type='button'
+        value='Try Again'
+      )
+      input(
+        type='button'
+        value='Start Again'
+      )
