--- a/process/pug/modules/_head.pug
+++ b/process/pug/modules/_head.pug
@@ -38,7 +38,7 @@ mixin head(page)
       content=page.description
     )
     //- Title, Icon and URL
-    title #{page.title} - DPera
+    title #{page.title} - Cumul8
     link(
       rel='canonical'
       href=page.url
