--- a/process/pug/modules/_header.pug
+++ b/process/pug/modules/_header.pug
@@ -2,4 +2,6 @@
 
 mixin header()
   header
-    h1 Submit Timesheet
+    h1.form--state-input Submit Timesheet
+    span.text--xxl.form--state-success Timesheet Submitted
+    span.text--xxl.form--state-error Failed to Submit
