--- a/process/pug/modules/_form.pug
+++ b/process/pug/modules/_form.pug
@@ -1,7 +1,7 @@
 //- modules/_form.pug
 
 mixin generate_form_fields(fields)
-  fieldset
+  fieldset.form--state-input
     //- Honeypot input, reduces spam if link is externally accessible
     input(
       type='text'
