--- a/process/pug/modules/_header.pug
+++ b/process/pug/modules/_header.pug
@@ -2,6 +2,8 @@
 
 mixin header()
   header
-    h1.form--state-input Submit Timesheet
-    span.text--xxl.form--state-success Timesheet Submitted
-    span.text--xxl.form--state-error Failed to Submit
+    img(
+      src='/img/cumul8_logo_white.png'
+      alt='Cumul8 Logo'
+    ).logo
+    h1 TIMESHEET
