--- a/process/sass/framework/_colors.scss
+++ b/process/sass/framework/_colors.scss
@@ -2,6 +2,7 @@
   // main
   @include defineColorHSL(--color-primary-darker, 220, 90%, 36%);
   @include defineColorHSL(--color-primary-dark, 220, 90%, 46%);
+  // #2C353D
   @include defineColorHSL(--color-primary, 220, 90%, 56%);
   @include defineColorHSL(--color-primary-light, 220, 90%, 66%);
   @include defineColorHSL(--color-primary-lighter, 220, 90%, 76%);
