--- a/process/pug/index.pug
+++ b/process/pug/index.pug
@@ -30,20 +30,7 @@ html(lang='en')
           )
           p.text--lg Submitting
       .form--state-success.form--result
-        svg(
-          version='1.1'
-          x='0px'
-          y='0px'
-          width='78.369px'
-          height='78.369px'
-          viewBox='0 0 78.369 78.369'
-          style='enable-background:new 0 0 78.369 78.369;'
-          xml:space='preserve'
-        ).checkmark
-          g
-            path(
-              d='M78.049,19.015L29.458,67.606c-0.428,0.428-1.121,0.428-1.548,0L0.32,40.015c-0.427-0.426-0.427-1.119,0-1.547l6.704-6.704 c0.428-0.427,1.121-0.427,1.548,0l20.113,20.112l41.113-41.113c0.429-0.427,1.12-0.427,1.548,0l6.703,6.704 C78.477,17.894,78.477,18.586,78.049,19.015z'
-            )
+        +svg_checkmark()(class='checkmark')
         p.form--sub-email Thank you 
           span
           | .
@@ -51,28 +38,15 @@ html(lang='en')
           span
           |  of work today.
       .form--state-error.form--result
-        svg(
-          version='1.1'
-          x='0px'
-          y='0px'
-          width='357px'
-          height='357px'
-          viewBox='0 0 357 357'
-          style='enable-background:new 0 0 357 357;'
-          xml:space='preserve'
-        ).cross
-          g
-            g#clear
-              polygon(
-                points='357,35.7 321.3,0 178.5,142.8 35.7,0 0,35.7 142.8,178.5 0,321.3 35.7,357 178.5,214.2 321.3,357 357,321.3 214.2,178.5'
-              )
+        +svg_cross()(class='cross')
         p Failed to submit hours, please try again or manually email your timesheet to 
           a(href='mailto:example@cumul8.com?subject=[Timesheet Manual Submission] &body=Time: %0D%0A%0D%0AType of work: %0D%0A%0D%0AMessage: ').form--manual-email example@cumul8.com
       +generate_form_fields([
         {
+          label: 'Email:',
           name: 'eaddr',
           type: 'email',
-          placeholder: 'Email...',
+          placeholder: 'example@cumul8.com',
           max_length: 40
         },
         {
@@ -90,13 +64,6 @@ html(lang='en')
           max: 59
         },
         {
-          name: 'message',
-          type: 'textarea',
-          placeholder: 'Message (optional):',
-          max_length: 1000,
-          min_length: 0
-        },
-        {
           name: 'work',
           type: 'label',
           message: 'What type of work is this for?'
@@ -106,8 +73,17 @@ html(lang='en')
           type: 'radio',
           choices: [
             'Time working on bugs & features',
-            'Time spent reviewing the work of a junior dev'
+            'Time spent reviewing the work of a junior dev',
+            'Other - Specify in message'
           ]
-        }
+        },
+        {
+          label: 'Message (optional):',
+          name: 'message',
+          type: 'textarea',
+          placeholder: 'maximum 1000 characters',
+          max_length: 1000,
+          min_length: 0
+        },
       ])
       +footer()
