--- a/process/pug/modules/_footer.pug
+++ b/process/pug/modules/_footer.pug
@@ -21,5 +21,5 @@ mixin footer()
     .form--state-success
       input(
         type='button'
-        value='Enter Another Timesheet'
+        value='Submit Another Timesheet'
       ).btn.btn--primary
