--- a/process/pug/modules/_svgs.pug
+++ b/process/pug/modules/_svgs.pug
@@ -1,1 +1,29 @@
 //- modules/_svgs.pug
+mixin svg_cross()
+  svg(
+    version='1.1'
+    x='0px'
+    y='0px'
+    viewBox='0 0 357 357'
+    style='enable-background:new 0 0 357 357;'
+    xml:space='preserve'
+  )&attributes(attributes)= name
+    g
+      g#clear
+        polygon(
+          points='357,35.7 321.3,0 178.5,142.8 35.7,0 0,35.7 142.8,178.5 0,321.3 35.7,357 178.5,214.2 321.3,357 357,321.3 214.2,178.5'
+        )
+
+mixin svg_checkmark()
+  svg(
+    version='1.1'
+    x='0px'
+    y='0px'
+    viewBox='0 0 78.369 78.369'
+    style='enable-background:new 0 0 78.369 78.369;'
+    xml:space='preserve'
+  )&attributes(attributes)= name
+    g
+      path(
+        d='M78.049,19.015L29.458,67.606c-0.428,0.428-1.121,0.428-1.548,0L0.32,40.015c-0.427-0.426-0.427-1.119,0-1.547l6.704-6.704 c0.428-0.427,1.121-0.427,1.548,0l20.113,20.112l41.113-41.113c0.429-0.427,1.12-0.427,1.548,0l6.703,6.704 C78.477,17.894,78.477,18.586,78.049,19.015z'
+      )
