--- a/process/sass/framework/_buttons.scss
+++ b/process/sass/framework/_buttons.scss
@@ -12,7 +12,7 @@
   white-space: nowrap;
   text-decoration: none;
   line-height: 1;
-  padding: var(--space-xs) var(--space-sm);
+  padding: var(--space-sm) var(--space-sm);
   border-radius: 2.0em;
   font-size: var(--btn-font-size);
   color: var(--color-primary);
