--- a/process/sass/modules/_form.scss
+++ b/process/sass/modules/_form.scss
@@ -8,8 +8,77 @@
     display: none;
   }
 
-  input {
+  input,
+  textarea {
     width: 100%;
+    padding: var(--space-xs) var(--space-sm);
+    border-radius: var(--radius);
+    border: 0px solid;
+    box-shadow: var(--shadow-inset-sm);
+    margin-bottom: var(--space-md);
+  }
+
+  textarea {
+    height: 6em;
+  }
+
+  label {
+    padding-bottom: var(--space-xxxxs);
+    padding-left: var(--space-xxs);
+    display: inline-block;
+  }
+
+  .form--radio {
+    background: var(--color-white);
+    color: var(--color-contrast-high);
+    border-radius: var(--radius);
+    box-shadow: var(--shadow-inset-sm);
+    margin-bottom: var(--space-md);
+
+    label {
+      position: relative;
+      width: 100%;
+      padding: var(--space-sm) var(--space-lg) var(--space-sm) var(--space-md);
+
+      input {
+        opacity: 0;
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        right: 0;
+        left: 0;
+      }
+
+      input:checked ~ span {
+        font-weight: bold;
+
+        &:after {
+          content: url('/img/checkmark.svg');
+          position: absolute;
+          display: inline-block;
+          color: var(--color-success-dark);
+          right: 0.75em;
+          top: 0.5em;
+        }
+      }
+
+      &:after {
+        content: '';
+        display: block;
+        width: 80%;
+        position: absolute;
+        border-bottom: 1px solid var(--color-contrast-low);
+        bottom: 0;
+        left: 10%;
+      }
+
+      &:last-child:after {
+        display: none;
+      }
+    }
+    
   }
 
   .show {
@@ -18,6 +87,18 @@
 
   .hide {
     display: none !important;
+  }
+
+  input.form--valid {
+    border: 3px solid var(--color-success-dark);
+  }
+  input.form--invalid {
+    border: 3px solid var(--color-error);
+    margin-bottom: 0;
+  }
+  label.form--invalid {
+    color: var(--color-error);
+    margin-bottom: var(--space-md);
   }
 
   .form--state-input {
@@ -52,11 +133,20 @@
   .form--result {
     text-align: center;
 
-    img {
+    svg {
       display: inline-block;
       width: 10em;
       max-width: 60%;
-      padding-bottom: var(--space-lg);
+      padding-top: var(--space-xxl);
+      padding-bottom: var(--space-xl);
+
+      &.checkmark {
+        fill: var(--color-success-dark);
+      }
+
+      &.cross {
+        fill: var(--color-error);
+      }
     }
 
     p {
