--- a/process/sass/styles.scss
+++ b/process/sass/styles.scss
@@ -1,5 +1,5 @@
 /* ==== FONTS ==== */
-@import url('https://fonts.googleapis.com/css?family=Montserrat:300|Roboto');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:300|Roboto:400,700');
 /* ==== END FONTS ==== */
 
 /* ==== FRAMEWORK ==== */
