--- a/process/pug/index.pug
+++ b/process/pug/index.pug
@@ -50,18 +50,13 @@ html(lang='en')
           max_length: 40
         },
         {
-          name: 'hours',
-          classes: '',
-          type: 'number',
-          min: 0,
-          max: 24
-        },
-        {
-          name: 'minutes',
-          classes: '',
-          type: 'number',
-          min: 0,
-          max: 59
+          label: 'Time:',
+          name: 'time',
+          classes: 'form--time',
+          placeholder: 'hh:mm',
+          type: 'text',
+          max_length: 5,
+          pattern: '([01]?[0-9]|2[0-3]):[0-5][0-9]'
         },
         {
           name: 'work',
