--- a/process/sass/modules/_form.scss
+++ b/process/sass/modules/_form.scss
@@ -26,6 +26,11 @@
     padding-bottom: var(--space-xxxxs);
     padding-left: var(--space-xxs);
     display: inline-block;
+    width: 100%;
+  }
+
+  .form--time {
+    max-width: 5em;
   }
 
   .form--radio {
@@ -94,11 +99,9 @@
   }
   input.form--invalid {
     border: 3px solid var(--color-error);
-    margin-bottom: 0;
   }
   label.form--invalid {
     color: var(--color-error);
-    margin-bottom: var(--space-md);
   }
 
   .form--state-input {
