--- a/process/sass/framework/_typography.scss
+++ b/process/sass/framework/_typography.scss
@@ -78,7 +78,14 @@ h4, .text--md {
 // inline text
 a, .link {
   color: var(--color-primary);
-  text-decoration: underline;
+  text-decoration: none;
+  font-weight: bold;
+  transition: cubic-bezier(0.39, 0.575, 0.565, 1) color 0.5s;
+
+  &:hover,
+  &:focus {
+    color: var(--color-primary-light);
+  }
 }
 
 mark {
