Fix all links to work without internet.

--- a/process/pug/modules/_header.pug
+++ b/process/pug/modules/_header.pug
@@ -3,7 +3,7 @@
 mixin header()
   header
     img(
-      src='/img/cumul8_logo_white.png'
+      src='img/cumul8_logo_white.png'
       alt='Cumul8 Logo'
     ).logo
     h1 TIMESHEET
