--- a/process/sass/_base.scss
+++ b/process/sass/_base.scss
@@ -1,6 +1,6 @@
 body {
   background-color: #2C353D; // TODO: Add to color scss
-  background-image: url('/img/gold_gear.jpg');
+  background-image: url('../img/gold_gear.jpg');
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
