--- a/process/pug/modules/_head.pug
+++ b/process/pug/modules/_head.pug
@@ -40,29 +40,31 @@ mixin head(page)
     //- Title, Icon and URL
     title #{page.title} - Cumul8
     link(
+      rel='shortcut icon'
+      href='img/favicon.png'
+    )
+    link(
       rel='canonical'
       href=page.url
     )
     //- Styles
     link(
       rel='stylesheet'
-      href='/css/styles.css'
+      href='css/styles.css'
     )
     //- JavaScript
     script(
-      src="https://code.jquery.com/jquery-3.3.1.min.js"
-      integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-      crossorigin="anonymous"
+      src="lib/jquery-3.3.1.min.js"
       defer
     )
     script(
-      src='https://cdn.jsdelivr.net/npm/jquery-validation@1.19.0/dist/jquery.validate.min.js'
+      src='lib/jquery.validate-1.19.0.min.js'
       defer
     )
     script(
-      src='/js/main.js'
+      src='js/main.js'
       defer
     )
     <!--[if lt IE 9]>
-      script(src='/lib/html5shiv.js')
+      script(src='lib/html5shiv.js')
     <![endif]-->
