Implement hover to buttons and fix input styles from being inherited by buttons.

--- a/process/pug/modules/_footer.pug
+++ b/process/pug/modules/_footer.pug
@@ -7,19 +7,19 @@ mixin footer()
         input(
           type='reset'
           value='Clear'
-        ).btn.btn--accent
+        ).btn.btn--accent.btn--full-width
       .submit
         input(
           type='submit'
           value='Submit Timesheet'
-        ).btn.btn--primary
+        ).btn.btn--primary.btn--full-width
     .form--state-error
       input(
         type='button'
         value='Try Again'
-      ).btn.btn--primary
+      ).btn.btn--primary.btn--full-width
     .form--state-success
       input(
         type='button'
         value='Submit Another Timesheet'
-      ).btn.btn--primary
+      ).btn.btn--primary.btn--full-width
