--- a/process/sass/framework/_buttons.scss
+++ b/process/sass/framework/_buttons.scss
@@ -18,6 +18,7 @@
   color: var(--color-primary);
   justify-content: center;
   align-items: center;
+  transition: cubic-bezier(0.39, 0.575, 0.565, 1) background-color 0.5s;
 }
 
 // themes
@@ -25,6 +26,11 @@
   background-color: var(--color-primary);
   color: var(--color-white);
   @include fontSmooth;
+
+  &:focus,
+  &:hover {
+    background-color: var(--color-primary-dark);
+  }
 }
 
 .btn--subtle { // subtle version, used for secondary actions or in combo with primary/accent button
@@ -37,6 +43,11 @@
   background-color: var(--color-accent);
   color: var(--color-white);
   @include fontSmooth;
+
+  &:focus,
+  &:hover {
+    background-color: var(--color-accent-dark);
+  }
 }
 
 // feedback
