--- a/process/sass/modules/_form.scss
+++ b/process/sass/modules/_form.scss
@@ -14,7 +14,8 @@
     display: none;
   }
 
-  input,
+  input[type="email"],
+  input[type="text"],
   textarea {
     width: 100%;
     padding: var(--space-xs) var(--space-sm);
